test/zinc_source/compile_errors/concurrency/04_channel_send_non_channel_statement.zn
// expected-error: 'value' is not a channel

fn main() {
    value = 1
    value <- 2
}
